--- a/witness-logger/pom.xml
+++ b/witness-logger/pom.xml
@@ -2,12 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>witness-logger</artifactId>
+
     <parent>
         <artifactId>Witness</artifactId>
         <groupId>dev.dankom</groupId>
         <version>1.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>witness-logger</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>dev.dankom</groupId>
+            <artifactId>witness-util</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dev.dankom</groupId>
+            <artifactId>witness-util</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
