--- a/witness-security/pom.xml
+++ b/witness-security/pom.xml
@@ -10,4 +10,12 @@
         <groupId>dev.dankom</groupId>
         <version>1.0</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.69</version>
+        </dependency>
+    </dependencies>
 </project>
