--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 
         <module>witness-neural</module>
         <module>witness-security</module>
+        <module>witness-asm</module>
+        <module>witness-discord</module>
+        <module>witness-netty</module>
     </modules>
 
     <properties>
@@ -71,12 +74,6 @@
             <version>13.0</version>
         </dependency>
         <dependency>
-            <groupId>org.zeroturnaround</groupId>
-            <artifactId>zt-zip</artifactId>
-            <version>1.14</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>com.sun.jna</groupId>
             <artifactId>jna</artifactId>
             <version>3.0.9</version>
@@ -86,17 +83,6 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
-        </dependency>
-        <!--   ASM   -->
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-tree</artifactId>
-            <version>${asm.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-util</artifactId>
-            <version>${asm.version}</version>
         </dependency>
     </dependencies>
 </project>
